# mix-sim-v2

./: .gitignore  Cargo.toml  grafana.sh  prometheus.sh
config/: config.yaml
metrics/: setup-network.sh
metrics/prometheus/: backfill.sh  prometheus.yml
src/: config.rs  directory_entry.rs  distribution.rs  drop_sender.rs  erlang.rs  main.rs  message.rs  poisson_generator.rs  poisson_queue.rs  prometheus.rs  transport.rs  user_device.rs  user_with_device.rs
