[package]
name = "mix-sim-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.13"
ct-merkle = "0.2.0"
duration-str = { version = "0.17.0", features = ["lowercase", "no_calc"] }
nexosim = "0.3.3"
peroxide = "0.40.0"
prometheus-client = { path = "../../ajpauwels/client_rust" } #"0.23.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
serde = "1.0.219"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "macros", "time", "signal"] }
tokio-util = "0.7.16"
uuid = { version = "1.17.0", features = ["v4"] }
